<resources>
    <string name="app_name">MockForm</string>
    <string name="nameTV">NAME:  </string>
    <string name="nameEThint">Enter Full Name Here</string>
    <string name="addressTV">ADDRESS:  </string>
    <string name="addressEThint">Enter Street Address Here</string>
    <string name="cityTV">CITY:  </string>
    <string name="cityEThint">Enter City Here</string>
    <string name="zipCodeTV">ZIP CODE:  </string>
    <string name="zipCodeEThint">Enter Zip Code Here</string>
    <string name="genderTV">GENDER:  </string>
    <string name="shiftTV">SHIFT:  </string>
    <string name="settingsTV">Settings:  </string>
    <string name="maleRB">  Male  </string>
    <string name="femaleRB">  Female  </string>
    <string name="noAnswerRB">  Prefer Not To Answer   </string>
    <string name="morningCB">Morning</string>
    <string name="afternoonCB">Afternoon</string>
    <string name="eveningCB">Evening</string>
    <string name="imageButtonGo"></string>
    <string name="offOnToggle"></string>
    <string name="togglebutton">settingsTB</string>
    <string-array name="statesSpinner">
        <item>AL</item>
        <item>AR</item>
        <item>AZ</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>DC</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>

</resources>